style(aboutCarrier): fix overflow at 1440p width

--- a/src/components/Bubble/Bubble.scss
+++ b/src/components/Bubble/Bubble.scss
@@ -16,7 +16,7 @@
   height: 20vh;
   font-size: calc(60% + 1vmin);
   z-index: 100;
-  @media screen and (max-width: 1440px) {
+  @media screen and (max-width: 1504px) {
     font-size: calc(40% + 1vmin);
   }
   @media screen and (max-width: 1300px) {
